# zabbix-mcp-server

./: Dockerfile  MCP_SETUP.md  README.md  pyproject.toml
config/: mcp.json
docs/plans/: 2026-03-04-uvx-support.md
scripts/: start_server.py  test_server.py
zabbix_mcp/: __init__.py  zabbix_mcp_server.py
